name:                gloss-breakout
version:             0.1.0.0
synopsis:            Simple Gloss Breakout game
homepage:            https://github.com/KuroLevin/gloss-breakout
license:             GPLv3
license-file:        LICENSE
author:              Pedro Moreno
maintainer:          up201207840@fc.up.pt
copyright:           2018 Pedro Moreno
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gloss-breakout
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       random
  ghc-options:         -threaded -O2
